--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
     ></script>
 
     <!-- load our react component. -->
+    <script src="todo.js" defer type="text/babel"></script>
+    <script src="form.js" defer type="text/babel"></script>
     <script src="index.js" defer type="text/babel"></script>
   </body>
 </html>
